fix: prevent chat overflow when toggling move tree

--- a/seki-web/static/css/base.css
+++ b/seki-web/static/css/base.css
@@ -111,14 +111,20 @@ legend {
 
 /* Stone color icons: swap filled/outline with theme so both remain visible */
 .icon-stone-black,
-.icon-stone-white { fill: var(--fg); }
+.icon-stone-white {
+  fill: var(--fg);
+}
 
 @media (prefers-color-scheme: dark) {
   .icon-stone-black path {
-    d: path("M480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z");
+    d: path(
+      "M480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"
+    );
   }
   .icon-stone-white path {
-    d: path("M480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Z");
+    d: path(
+      "M480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Z"
+    );
   }
 }
 
@@ -279,10 +285,10 @@ button.link {
   max-width: 100%;
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1600px) {
   .game-page-body {
     display: grid;
-    grid-template-columns: 1fr auto 1fr;
+    grid-template-columns: minmax(0, 1fr) auto minmax(0, 1fr);
     align-items: start;
     width: 100%;
   }
@@ -298,8 +304,6 @@ button.link {
     margin-left: 1.5em;
     margin-right: 1.5em;
     width: auto;
-    min-width: 280px;
-    max-width: calc(100% - 3em);
     max-height: 80vh;
     overflow: hidden;
   }
@@ -307,8 +311,6 @@ button.link {
     grid-column: 3;
     align-self: stretch;
     width: auto;
-    min-width: 280px;
-    max-width: calc(100% - 3em);
     margin-left: 1.5em;
     margin-right: 1.5em;
     display: flex;
